# beads-web

./: .dolt.env.example  .env.local.example  .gitignore  CLAUDE.md  next.config.js  pm2.config.cjs  vitest.config.ts
.claude/: settings.json
.claude/hooks/: bash-guard.cjs  dispatch-guard.cjs  enforce-branch-before-edit.cjs  hook-utils.cjs  memory-capture.cjs  nudge-claude-md-update.cjs  session-start.cjs  validate-completion.cjs
.claude/rules/: beads-workflow.md  project-conventions.md
docs/: direct-dolt.md
docs/designs/: beads-kanban-ui-t25.md
scripts/: build-windows-direct.ps1  hooks-smoke.cjs  install-hooks.sh  start-direct-dolt.ps1
server/: Cargo.toml  build.rs
server/src/: config.rs  doctor.rs  dolt.rs  main.rs  process.rs
server/src/routes/: beads.rs  cli.rs  dolt.rs  dolt_watch.rs  fs.rs  git.rs  memory.rs  mod.rs  search.rs  session.rs  version.rs  worktree.rs
src/app/: layout.tsx  page.tsx
src/components/: add-project-dialog.tsx  bead-card.tsx  bead-detail.tsx  bead-pr-section.tsx  bead-search-results.tsx  copyable-text.tsx  design-doc-preview.tsx  design-doc-viewer.tsx  epic-card.tsx  global-search.tsx  home-bead-search.tsx  kanban-column.tsx  memory-panel.tsx  project-actions-menu.tsx  project-card.tsx  project-path-meta.tsx  project-row.tsx  project-status-indicator.tsx  spawn-session-button.tsx  update-banner.tsx
src/hooks/: use-bead-filters.ts  use-bead-search.ts  use-bead-url-sync.ts  use-beads.ts  use-dolt-watcher.ts  use-memory.ts  use-pr-settings.ts  use-pr-status.ts  use-project-actions.ts  use-projects-sort.ts  use-projects-view.ts  (+2 more)
(+42 files in other folders)
