[package]
name = "beads-server"
version = "0.11.2"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
# interpolate-folder-path: the frontend directory is resolved by build.rs and
# passed in through BEADS_WEB_FRONTEND_DIR (see the #[folder] attribute in main.rs).
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
open = "5"
mime_guess = "2"
notify = "6"
tokio-stream = "0.1"
futures = "0.3"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
directories = "5"
serde_yaml = "0.9"
regex = "1"
mysql_async = "0.34"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

[dev-dependencies]
tempfile = "3"
